# final-codebase-pyroscope

./: README.md  SENSOR_INTEGRATION_SETUP.md  session_context.md  sht40_reader.py  slam_nav_flashcards.md  thermal_capture.py  thermal_reader.py
application/: DEPLOYMENT_GUIDE.md  FRONTEND_INTEGRATION.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  QUICKSTART.md  package-lock.json  package.json
application/backend/: .env  .env.example  .gitignore  DATABASE_SETUP.md  README.md  ROS_SENSOR_SETUP.md  SETUP.md  START_SERVER.md  _localhost-2026_02_28_14_19_45-dump.sql  add_missing_data.py  create_sample_data.py  generate_dense_points.py  generate_ultra_dense_grid.py  requirements.txt  run.py  test_db_connection.py  test_heatmap_api.py  update_env_with_fuel.py  update_scan_aggregates.py  view_sample_data.py
application/backend/alembic/: env.py
application/backend/app/: config.py  database.py  dependencies.py  main.py
application/backend/scripts/: check_sensor_pipeline.sh  diagnose_sensor_availability.sh  ros_sensor_bridge.py  (+3 more)
application/src/: App.css  App.jsx  index.css
application/tests/: test_fuel_upload.py  test_interpolation.html  upload_test.py
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh
catkin_ws/src/pyroscope_navigation/: CMakeLists.txt  QUICKSTART.md  RANDOM_EXPLORATION.md  README.md  package.xml
catkin_ws/src/pyroscope_navigation/config/: costmap_common.yaml  dwa_planner.yaml  global_costmap.yaml  local_costmap.yaml  mission_config.yaml
catkin_ws/src/pyroscope_navigation/launch/: coverage_mission.launch  coverage_mission_nav.launch  exploration.launch  obstacle_avoidance.launch  random_exploration.launch
catkin_ws/src/pyroscope_navigation/scripts/: check_topics.sh  coverage_planner.py  fake_odom.py  lidar_obstacle_detector.py  random_explorer.py  random_explorer_with_obstacle.py  safety_stop.py  test_motors.py  test_single_waypoint.py
catkin_ws/src/pyroscope_sensors/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/pyroscope_sensors/launch/: jetson_bringup.launch  sensors.launch
catkin_ws/src/pyroscope_sensors/scripts/: sht40_node.py  thermal_node.py  upload_test.py
catkin_ws/src/transbot_nav/: CMakeLists.txt  package.xml
catkin_ws/src/transbot_nav/config/: base_local_planner.yaml  costmap_common.yaml  global_costmap.yaml  local_costmap.yaml
catkin_ws/src/transbot_nav/launch/: navigation.launch
devel/: .catkin  .rosinstall  setup.sh
docs/: SENSOR_UNAVAILABLE_FIX.md
docs/diagrams/: 01_architecture_3_devices.puml  02_mission_flow_sequence.puml  03_layers_3_devices.puml  04_navigation_control_flow.puml  05_network_topology.puml  DIAGRAM_ACCURACY_CHECK.md  DIAGRAM_GUIDE.md  EDGE_DEVICE_ANALYSIS.md  FINAL_POSTER_GUIDE.md  POSTER_01_simple_architecture.puml  POSTER_02_mission_flow.puml  POSTER_03_system_layers.puml  POSTER_04_data_flow.puml  POSTER_05_overview.puml  POSTER_CLEAN_architecture.puml  POSTER_CLEAN_mission_flow.puml  POSTER_CLEAN_overview.puml  POSTER_DIAGRAMS_GUIDE.md  POSTER_VISUAL_mission_sequence.puml  README.md  SENSOR_AVAILABILITY_FLOW.md  render_all.sh
(+66 files in other folders)
