<?xml version="1.0"?>
<package format="2">
  <name>pyroscope_navigation</name>
  <version>0.1.0</version>
  <description>Navigation system for Pyroscope fuel-sampling rover</description>

  <maintainer email="matthew@pyroscope.dev">Matthew Taruno</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>

  <exec_depend>move_base</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>navfn</exec_depend>

  <export>
  </export>
</package>
