<?xml version="1.0"?>
<package format="2">
  <name>transbot_nav</name>
  <version>0.0.0</version>
  <description>Navigation stack for Transbot using AMCL and move_base</description>
  <maintainer email="jetson@todo.todo">jetson</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>move_base</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>tf</exec_depend>
</package>
